# crypto-dashboard-DE25-UX25

./: .gitignore  README.md  fetch_data.py  main.py  pyproject.toml  samuel_kompleterring_storytelling.ipynb  storytelling_barchart.py  storytelling_linechart.py  transform.py
eda/: EDA_Viktor.ipynb  eda_zakaria.ipynb
streamlit/: streamlit.py
test_EDA/: 01_initial_eda.ipynb
zakaria_storytelling/code/: storytelling_barchart.py  storytelling_linechart.py  storytelling_trump_vs_gold.py
