[project]
name = "crypto-dashboard-de25-ux25"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.1",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "requests>=2.33.1",
    "streamlit>=1.56.0",
]
